--- a/TEST/WEB CAM CaptureTest.html
+++ b/TEST/WEB CAM CaptureTest.html
@@ -11,7 +11,7 @@
     <!--  카매라 live 영역, hidden 속성 입힐 수 있음. -->
     <button id="capture">Capture</button>
     <!--  사진을 capture하기 위한 버튼  -->
-    <canvas id="snapshot" width=320 height=240></canvas>
+    <canvas id="snapshot" width="320" height="240"></canvas>
     <!--  capture한 사진을 보여주기위한 canvas 객체 영역  -->
     
     <script>
